feat:抖音项目学习来标题居住，图片大小等

--- a/可视化动态表单系统设计文档.md
+++ b/可视化动态表单系统设计文档.md
@@ -1,5 +1,28 @@
 <!-- [TOC] -->
-<!-- 目录存在 md 兼容性问题 -->
+
+## <!-- 目录存在 md 兼容性问题 -->
+
+---
+
+这些区域为学习内容
+
+- 标题居中
+<h1 align="center">
+  Douyin-Vue
+</h1>
+
+- 块元素包裹行内
+<p align="center">
+ <a href="README.en.md">English</a> | <a href="README.es.md">Spanish</a> | <a href="README.de.md">German</a> | 
+<a href="README.fr.md">French</a> | <a href="../README.md">简体中文</a> |  <a href="README.ja.md">日本語</a> 
+</p>
+- 图片区域大小与行内
+<div>
+<img width="250px" src='image/项目结构图1.png' />
+<img width="250px" src='image/项目结构图1.png' />
+</div>
+
+---
 
 # 可视化动态表单系统设计文档(v1.0)
 
@@ -328,9 +351,9 @@ export const adapterComponent = (ctx, dataObject) => {
 
 1. 自定义组件应包含以下三大核心状态属性，支撑业务需要，部分组件结合业务进行了定制
 
-- **isFormEdit**-是否可编辑
-- **isReDo**-是否重做（是否再次编辑）
-- **value**-表单组件值
+   - **isFormEdit**-是否可编辑
+   - **isReDo**-是否重做（是否再次编辑）
+   - **value**-表单组件值
 
 2. 内置原始组件采用 Elemntui 与 vant 请结合属性进行配置使用
 3. 所有组件应采用事件传递值
